# z3-test

./: CMakeLists.txt  Dockerfile  README.md  build.sh  util.cc  util.h  z3ntest.cc  z3solver.cc  z3solver.h  z3test.cc
test/: objdump.data
test_nested/: 000045.data.reload
